secondfile/objects/RDS_Contract_Details__c.object
<CustomObject>
    <description>RDS-DealHash-RDS-Contract Details</description>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <description>RDS-DealHash-RDS-Contract Details-Contract Number</description>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Contract_Account_Id__c</fullName>
        <formula>RDS_Deal_Hash__r.Opportunity__r.Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RDS Contract Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Deal_Hash__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-DealHash-RDS-Contract Details-RDS-Deal Hash</description>
        <label>RDS-Deal Hash</label>
        <referenceTo>Deal_Hash__c</referenceTo>
        <relationshipLabel>RDS-Contract Details</relationshipLabel>
        <relationshipName>RDS_Contract_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>RDS-DealHash-RDS-Contract Details-</description>
        <label>Start Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <description>RDS-DealHash-RDS-Contract Details-Term</description>
        <label>Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>RDS-Contract Details</label>
    <nameField>
        <displayFormat>RCD-{0000}</displayFormat>
        <label>RDS-Contract Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RDS-Contract Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>